# SAMD21_FreeRTOS_Demo

./: .gitignore  CMakeLists.txt  README.md  arm-none-eabi-gcc.cmake
config/: hpl_dac_config.h  peripheral_clk_config.h
examples/: driver_examples.c  driver_examples.h
gcc/: Makefile
hal/documentation/: dac_os.rst
hal/include/: hal_dac_os.h
hal/src/: hal_dac_os.c
hpl/tc/: tc_lite.c
samd21d/gcc/gcc/: startup_samd21.c
samd21d/include/: sam.h
src/: driver_init.c  driver_init.h  main.c
